--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,9 +41,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
